# Potato

./: .gitignore  CMakeLists.txt  README.md
assets/: readme.txt
assets/maps/: test_room.bsp
assets/shaders/: basic.glsl  cube.glsl  goldsrc_model.glsl  q3bsp.glsl  q3bsp_lightmapped.glsl  q3bsp_vtxlit.glsl  vbsp.glsl
shaders/: source_mdl.glsl  vbsp_disp.glsl
src/: Application.cpp  Application.h  BrushTool.cpp  BrushTool.h  BspScene.cpp  BspScene.h  Camera.cpp  Camera.h  Cube.cpp  Cube.h  CubeGeometry.cpp  CubeGeometry.h  DebugRenderer.cpp  GoldSrcMDLAsset.cpp  GoldSrcMDLAsset.h  GoldSrcModel.cpp  GoldSrcModel.h  Grid.cpp  Grid.h  Input.cpp  Input.h  KeyValueCollection.cpp  KeyValueCollection.h  KeyValueParser.c  KeyValueParser.h  MDLFile.cpp  MDLFile.h  Player.cpp  Player.h  PlayerMovement.cpp  PlayerMovement.h  Q3Bezier.cpp  Q3BspCollision.cpp  Q3BspCollision.h  Q3BspMesh.cpp  Q3BspMesh.h  Q3LightGrid.cpp  Q3LightGrid.h  Q3MapScene.cpp  Q3MapScene.h  (+35 more)
